# Our-Founding-Fathers

./: CMakeLists.txt  LICENSE  Main.readme.md  README.md  app.cpp  app.hpp  assets.readme.md  fetch_texts.py  fire.cpp  fire.hpp  install_mbrola_voices.py  main.cpp  ocr.cpp  ocr.hpp  repository.cpp  repository.hpp  scene.cpp  scene.hpp  tts.cpp  tts.hpp  woodui.cpp  woodui.hpp
